set 5/36-37-38/log.txt
strings/at1.cc: In member function ‘const string& Strings::at(size_t) const’:
strings/at1.cc:5:25: error: passing ‘const Strings’ as ‘this’ argument discards qualifiers [-fpermissive]
     return priv_at(index);
                         ^
In file included from strings/strings.ih:3:0,
                 from strings/at1.cc:1:
strings/strings.h:34:22: note:   in call to ‘std::__cxx11::string& Strings::priv_at(size_t)’
         std::string &priv_at(size_t index);                   // backdoor
                      ^~~~~~~
